Alignment Corrections

--- a/CSS/home.css
+++ b/CSS/home.css
@@ -45,6 +45,6 @@ section:nth-of-type(3) {
 
 section:nth-of-type(4) > * {
     margin: auto;
-    width: 70%;
+    width: 80%;
     text-align: center;
 }
